feat: conclui o desafio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 <body>
-    
+    <main class="container">
+        <h2 class="title">Jogo da Memória</h2>
+        <section class="game">
+
+        </section>
+
+        <button class="reset" onclick="window.location.reload()">Resetar Jogo</button>
+    </main>
+
     <script defer src="./src/scripts/engine.js"></script>
 </body>
 </html>
